--- a/index.html
+++ b/index.html
@@ -13,16 +13,34 @@
     <![endif]-->
   </head>
   <body>
+
+  <!---- Navbar ----->
+  <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
 
-      <header class="page-header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">About Ribbit</a></li>
-          <li><a href="#">Treehouse</a></li>
-        </ul>
-        <h3>Ribbit</h3>
-      </header>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      <a class="navbar-brand text-muted" href="#">Rabbit</a>
+        <div class="collapse navbar-collapse">
+          <ul class="nav nav-pills pull-right">
+            <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">About Ribbit</a></li>
+            <li><a href="#">Treehouse</a></li>
+          </ul>
+
+        </div>
+        </div>
+    </div>
+  <!---End Navbar---->
+
+    <div class="container">
+
+
       
       <div class="jumbotron">
         <h1>Self-destructing message app</h1>
